Create DB from Processing

--- a/resources/build.properties
+++ b/resources/build.properties
@@ -30,7 +30,7 @@ sketchbook.location=F://DBTool
 
 #classpath.local.location=${user.home}/Documents/workspace/libs
 #classpath.local.location=/Applications/Processing.app/Contents/Java
-classpath.local.location=C:/Users/vesol/workspace/libs
+classpath.local.location=${user.home}/workspace/libs
 
 # Add all jar files that are required for compiling your project to the local 
 # and project classpath. Use a comma as delimiter. These jar files must be 
@@ -67,7 +67,7 @@ project.name=DBManager
 # The name as the user will see it. This can contain spaces and special 
 # characters.
 
-project.prettyName=DB Manager
+project.prettyName=DB Manager for Processing
 
 
 # Use 'normal' or 'fast' as value for project.compile.
@@ -83,13 +83,13 @@ project.compile=normal
 # Set your name and URL, used for the web page and properties file.
 
 author.name=Venerando Solis Barrado
-author.url=http://vesolba.esmiweb.es
+author.url=https://github.com/vesolba
 
 
 # Set the web page for your Tool.
 # This is NOT a direct link to where to download it.
 
-tool.url=https://dbmanager.esmiweb.es
+tool.url=https://github.com/vesolba/DBManager-for-Processing
 
 
 # Set the category (or categories) of your Tool from the following list:
@@ -110,7 +110,7 @@ tool.categories=Utilities,GUI,Data
 # mentioning that it's a Tool. This should start with a capitalized letter, and 
 # end with a period.
 
-tool.sentence=Tool to manage a Java DB (aka Derby) server in mode "embedded server".
+tool.sentence=To manage a Java DB (aka Derby) server from Processing.
 
 
 # Additional information suitable for the Processing website. The value of
@@ -118,7 +118,7 @@ tool.sentence=Tool to manage a Java DB (aka Derby) server in mode "embedded serv
 # second sentence here. If your Tool only works on certain operating systems,
 # mention it here.
 
-tool.paragraph=Java stuff over Java DB. It must work in any platform (not tested). 
+tool.paragraph=Tested only on Windows 10. 
 
 
 # Set the source code repository for your project.
