--- a/tool.properties
+++ b/tool.properties
@@ -5,7 +5,7 @@
 name = DBManager for Processing
 
 # List of authors. Links can be provided using the syntax [author name](url).
-authors = [Venerando Solís Barrado](https://github.com/vesolba)
+authors = [Venerando SolÃ­s Barrado](https://github.com/vesolba)
 
 # A web page for your tool, NOT a direct link to where to download it.
 url = https://github.com/vesolba/DBManager-for-Processing
@@ -18,7 +18,7 @@ url = https://github.com/vesolba/DBManager-for-Processing
 # 
 # If a value other than those listed is used, your library will listed as 
 # "Other". Many categories must be comma-separated.
-categories = Data
+categories = Data,Utilities
 
 # A short sentence (or fragment) to summarize the tool's function. This will be
 # shown from inside the PDE when the tool is being installed. Avoid repeating
