--- a/resources/tool.properties
+++ b/resources/tool.properties
@@ -2,13 +2,13 @@
 # UTF-8 supported.
 
 # The name of your tool as you want it formatted.
-name = ##tool.name##
+name = DBManager for Processing
 
 # List of authors. Links can be provided using the syntax [author name](url).
-authors = [##author.name##](##author.url##)
+authors = [Venerando Solís Barrado](https://github.com/vesolba)
 
 # A web page for your tool, NOT a direct link to where to download it.
-url = ##tool.url##
+url = https://github.com/vesolba/DBManager-for-Processing
 
 # The category (or categories) of your tool, must be from the following list:
 #   "3D"            "Animation"     "Compilations"      "Data"          
@@ -18,20 +18,20 @@ url = ##tool.url##
 # 
 # If a value other than those listed is used, your library will listed as 
 # "Other". Many categories must be comma-separated.
-categories = ##tool.categories##
+categories = Data
 
 # A short sentence (or fragment) to summarize the tool's function. This will be
 # shown from inside the PDE when the tool is being installed. Avoid repeating
 # the name of your tool here. Also, avoid saying anything redundant like
 # mentioning that it's a tool. This should start with a capitalized letter, and
 # end with a period.
-sentence = ##tool.sentence##
+sentence = A simplified Derby(aka Java DB) manager.
 
 # Additional information suitable for the Processing website. The value of
 # 'sentence' always will be prepended, so you should start by writing the
 # second sentence here. If your tool only works on certain operating systems,
 # mention it here.
-paragraph = ##tool.paragraph## 
+paragraph = Integrated in Processing to create and maintain lightweight databases without the need of using more sophisticated external programs.
 
 # Links in the 'sentence' and 'paragraph' attributes can be inserted using the
 # same syntax as for authors. 
@@ -41,11 +41,11 @@ paragraph = ##tool.paragraph##
 # compare different versions of the same tool, and check if an update is 
 # available. You should think of it as a counter, counting the total number of 
 # releases you've had.
-version = ##tool.version##  # This must be parsable as an int
+version = 1 # This must be parsable as an int
 
 # The version as the user will see it. If blank, the version attribute will be 
 # used here. This should be a single word, with no spaces.
-prettyVersion = ##tool.prettyVersion##  # This is treated as a String
+prettyVersion = 1.0.0  # This is treated as a String
 
 # The min and max revision of Processing compatible with your tool.
 # Note that these fields use the revision and not the version of Processing, 
@@ -53,5 +53,5 @@ prettyVersion = ##tool.prettyVersion##  # This is treated as a String
 # You can find the revision numbers in the change log: https://raw.githubusercontent.com/processing/processing/master/build/shared/revisions.txt
 # Only use maxRevision (or minRevision), when your tool is known to break in a 
 # later (or earlier) release. Otherwise, use the default value 0.
-minRevision = ##compatible.minRevision##
-maxRevision = ##compatible.maxRevision##
+minRevision = 0
+maxRevision = 0
